remove react and mdx

--- a/src/_data/projects.yaml
+++ b/src/_data/projects.yaml
@@ -1,15 +1,25 @@
-- name: string
-  start: string
-  end: string
-  technology: string
-  description: string
-  imageUrl: string,
-  githubUrl: string
+- name: Gopher Major Planner
+  start: Feb 2023
+  end: Sep 2024
+  technology: ReactJS; TailwindCSS; NodeJS; PostgreSQL
+  description:  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                anim id est laborum.
+  imageUrl: ../img/placeholder.png
+  githubUrl: https://github.com/steven-tam/MmOverlap
 
-- name: string
-  start: string
-  end: string
-  technology: string
-  description: string
-  imageUrl: string,
-  githubUrl: string
+- name: Gopher Major Planner
+  start: Feb 2023
+  end: Sep 2024
+  technology: ReactJS; TailwindCSS; NodeJS; PostgreSQL
+  description:  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                anim id est laborum.
+  imageUrl: ../img/placeholder.png
+  githubUrl: https://github.com/steven-tam/MmOverlap
