--- a/src/_data/projects.yaml
+++ b/src/_data/projects.yaml
@@ -8,18 +8,44 @@
                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
                 anim id est laborum.
-  imageUrl: ../img/placeholder.png
+  imageUrl: ../img/gmp-results-long.png
   githubUrl: https://github.com/steven-tam/MmOverlap
 
-- name: Gopher Major Planner
-  start: Feb 2023
-  end: Sep 2024
-  technology: ReactJS; TailwindCSS; NodeJS; PostgreSQL
+- name: YapRap - Android
+  start: June 2023
+  end: Present
+  technology: React Native; Expo; NodeJS; SQLite; Zustand; Figma; RevenueCat
   description:  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
                 anim id est laborum.
-  imageUrl: ../img/placeholder.png
-  githubUrl: https://github.com/steven-tam/MmOverlap
+  imageUrl: ../img/yaprap-home.svg
+  githubUrl: https://yaprap.net
+
+- name: YapRap - Web
+  start: June 2023
+  end: Present
+  technology: NextJS; TailwindCSS; Framer-motion; 
+  description:  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                anim id est laborum.
+  imageUrl: ../img/yaprap-web-home.png
+  githubUrl: https://yaprap.net
+
+- name: Interactive Prerequesite Flowchart
+  start: June 2023
+  end: Present
+  technology: React Native; Expo; NodeJS; SQLite; Zustand
+  description:  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                anim id est laborum.
+  imageUrl: ../img/ipf-darkmode.png
+  githubUrl: https://github.com/chaunmt/Interactive-Prerequisite-Flowchart
